appview: prevent content shift when content overflows
in profile pages, when expanding activities, it can cause a page to
begin overflowing. this settings reserves space for the scrollbar
upfront.

--- a/input.css
+++ b/input.css
@@ -41,6 +41,7 @@
     @layer base {
         html {
             font-size: 14px;
+            scrollbar-gutter: stable;
         }
         @supports (font-variation-settings: normal) {
             html {
